--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cpf_utils",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Utilities for studying CPF format. Including generation and validation",
   "main": "generate_cpfs.js",
   "scripts": {
@@ -18,6 +18,7 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "eslint": "^3.11.1",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
